--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "hse-guardian-ai-intelligent",
+  "name": "hse-guardian-ai",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "2.4.1",
+  "main": "index.html",
+  "description": "Enterprise-grade AI dashboard for real-time industrial safety monitoring.",
+  "author": "HSE Guardian Team",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
+    "@google/genai": "^0.0.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0"
+    "@tauri-apps/api": "^1.5.3"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@tauri-apps/cli": "^1.5.11",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.18"
   }
 }
