--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@google/genai": "^0.0.2",
+    "@mlc-ai/web-llm": "^0.2.61",
     "@tensorflow/tfjs": "^4.17.0",
     "@tensorflow-models/coco-ssd": "^2.2.3",
-    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@tauri-apps/api": "^1.5.3"
